--- a/client/index.html
+++ b/client/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ScoreTracker</title>
     <script>
-      (function() {
-        var theme = localStorage.getItem('scoretracker-theme') || 'system';
-        var resolved = theme;
+      ;(function () {
+        var theme = localStorage.getItem('scoretracker-theme') || 'system'
+        var resolved = theme
         if (theme === 'system') {
-          resolved = window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light';
+          resolved = window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light'
         }
-        document.documentElement.classList.add(resolved);
-      })();
+        document.documentElement.classList.add(resolved)
+      })()
     </script>
   </head>
   <body>
